error_log.txt
python :   File 
"<string>", line 1
At line:1 char:1
+ python -c "import 
sys; 
sys.path.insert(0, 
'backend'); import 
tracebac ...
+ ~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~
    + CategoryInfo   
           : NotSpe  
  cified: (  File    
 "<string>", line    
 1:String) [], R    
emoteException
    + FullyQualified 
   ErrorId : Native  
  CommandError
 
    import sys; 
sys.path.insert(0, 
'backend'); import 
traceback; 
exec('try:\n from 
api.models.case 
import *\n print(" 
case OK\)\nexcept
                     
                     
                     
       ^
SyntaxError: 
unterminated string 
literal (detected at 
line 1)
